Fix to prevent lists overlapping floated images to their left

--- a/app/assets/stylesheets/main/screen.css.scss
+++ b/app/assets/stylesheets/main/screen.css.scss
@@ -560,3 +560,8 @@ label.filter input {
 .nav-pills li {
   font-size: 1.4em;
 }
+
+.list-near-image {
+  position: relative;
+  left: 25px;
+}
